SystemUI: Add caffeine QS tile
Co-authored-by: chillger <alexander.loskutov@gmail.com>
Co-authored-by: Michael Bestas <mkbestas@gmail.com>
Change-Id: I0b9a498285930cc397b7c4d20ddec3f447e6d332

--- a/packages/SystemUI/res/values/flare_strings.xml
+++ b/packages/SystemUI/res/values/flare_strings.xml
@@ -65,4 +65,10 @@
     <!-- Island notification -->
     <string name="now_playing_on">Now Playing on %1$s</string>
     <string name="by_artist">%1$s by %2$s</string>
+
+    <!-- Custom QS tiles -->
+    <!-- Caffeine QS tile -->
+    <string name="quick_settings_caffeine_label">Caffeine</string>
+    <string name="accessibility_quick_settings_caffeine_off">Caffeine off.</string>
+    <string name="accessibility_quick_settings_caffeine_on">Caffeine on.</string>
 </resources>
