--- a/core/res/res/values/flare_symbols.xml
+++ b/core/res/res/values/flare_symbols.xml
@@ -33,4 +33,7 @@
     <!-- Define device configs on boot -->
     <java-symbol type="array" name="global_device_configs_override" />
     <java-symbol type="array" name="device_configs_override" />
+   
+    <!-- Camera -->
+    <java-symbol type="array" name="config_cameraHFRPrivAppList" />
 </resources>
