--- a/core/res/res/values/flare_strings.xml
+++ b/core/res/res/values/flare_strings.xml
@@ -3,7 +3,7 @@
      Copyright (C) 2024 Project Flare
      SPDX-License-Identifier: Apache-2.0
 -->
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- Settings Restart -->
     <string name="settings_restart_title">Settings restart required</string>
@@ -24,4 +24,7 @@
     <string name="aerr_copy">Copy crash log URL</string>
     <string name="url_copy_success">URL copied successfully</string>
     <string name="url_copy_failed">An error occured while uploading the log to mkr/bin</string>
+
+    <!-- App lock -->
+    <string name="unlock_application">Unlock <xliff:g id="label" example="Telegram">%1$s</xliff:g></string>
 </resources>
