--- a/core/res/res/values/flare_config.xml
+++ b/core/res/res/values/flare_config.xml
@@ -78,5 +78,21 @@
 
     <!-- Whether to cleanup fingerprints upon connection to the daemon and when
          user switches -->
-    <bool name="config_cleanupUnusedFingerprints">true</bool>     
+    <bool name="config_cleanupUnusedFingerprints">true</bool>
+
+    <!-- Build properties from a GMS certified device against current platform SPL level -->
+    <string-array name="config_certifiedBuildProperties" translatable="false">
+      <!--
+        <item>Build.DEVICE</item>
+        <item>Build.PRODUCT</item>
+        <item>Build.MODEL</item>
+        <item>Build.FINGERPRINT</item>
+      -->
+    </string-array>
+
+    <!-- Build fingerprint from stock ROM -->
+    <string name="config_stockFingerprint" translatable="false"></string>
+
+    <!-- Device model (Build.MODEL) to spoof for netflix, if not empty -->
+    <string name="config_netflixSpoofModel" translatable="false"></string>     
 </resources>
