--- a/core/res/res/values/flare_symbols.xml
+++ b/core/res/res/values/flare_symbols.xml
@@ -88,5 +88,10 @@
 
     <!-- Whether to cleanup fingerprints upon connection to the daemon and when
          user switches -->
-    <java-symbol type="bool" name="config_cleanupUnusedFingerprints" />     
+    <java-symbol type="bool" name="config_cleanupUnusedFingerprints" />
+
+    <!-- PropImitationHooks -->
+    <java-symbol type="array" name="config_certifiedBuildProperties" />
+    <java-symbol type="string" name="config_stockFingerprint" />
+    <java-symbol type="string" name="config_netflixSpoofModel" />     
 </resources>
