--- a/core/res/res/values/flare_config.xml
+++ b/core/res/res/values/flare_config.xml
@@ -98,5 +98,9 @@
     <string name="config_stockFingerprint" translatable="false"></string>
 
     <!-- Device model (Build.MODEL) to spoof for netflix, if not empty -->
-    <string name="config_netflixSpoofModel" translatable="false"></string>     
+    <string name="config_netflixSpoofModel" translatable="false"></string>
+
+    <!-- Whether to spoof device as pixel for certain google apps, to
+         unlock pixel-exclusive features -->
+    <bool name="config_spoofGoogleApps">true</bool>     
 </resources>
