SystemUI: Add FingerprintInteractiveToAuthProvider implementation
This is required for the "touch to unlock anytime" setting on devices
with side mounted fingerprint sensor.

Ref: 66a048d646fd816e7757e300c62fa5cebf04761d

Change-Id: If3308860a428d9966f2b0a0024764df95f8f9a8b

--- a/core/res/res/values/flare_config.xml
+++ b/core/res/res/values/flare_config.xml
@@ -66,9 +66,6 @@
     <!-- Whether to use Richtap vibration -->
     <bool name="config_usesRichtapVibration">false</bool>
 
-    <!-- Whether devices suports in-display fingerprint when screen is off -->
-    <bool name="config_supportsScreenOffUdfps">false</bool>
-
     <!-- Whether device supports in-display fingerprint -->
     <bool name="config_supportsUdfps">false</bool>
 
@@ -101,5 +98,11 @@
     <string name="config_netflixSpoofModel" translatable="false"></string>
 
     <!-- Whether to spoof GMS as Pixel Tablet -->
-    <bool name="config_spoofasTablet">false</bool>     
+    <bool name="config_spoofasTablet">false</bool>
+
+    <!-- Should we listen for fingerprints when the screen is off?  Devices
+         with a rear-mounted sensor want this, but certain devices have
+         the sensor embedded in the power key and listening all the time
+         causes a poor experience. -->
+    <bool name="config_fingerprintWakeAndUnlock">true</bool>
 </resources>
