--- a/core/res/res/values/flare_symbols.xml
+++ b/core/res/res/values/flare_symbols.xml
@@ -91,5 +91,11 @@
     <java-symbol type="array" name="config_certifiedBuildProperties" />
     <java-symbol type="string" name="config_stockFingerprint" />
     <java-symbol type="string" name="config_netflixSpoofModel" />
-    <java-symbol type="bool" name="config_spoofasTablet" />     
+    <java-symbol type="bool" name="config_spoofasTablet" />
+
+    <!-- Should we listen for fingerprints when the screen is off?  Devices
+         with a rear-mounted sensor want this, but certain devices have
+         the sensor embedded in the power key and listening all the time
+         causes a poor experience. -->
+    <java-symbol type="bool" name="config_fingerprintWakeAndUnlock" />     
 </resources>
