--- a/packages/SystemUI/res/values/flare_styles.xml
+++ b/packages/SystemUI/res/values/flare_styles.xml
@@ -15,4 +15,13 @@
         <item name="android:textSize">12sp</item>
         <item name="android:fontFamily">@*android:string/config_bodyFontFamily</item>
     </style>
+
+    <!-- Island notification -->
+    <style name="Theme.Island.SystemUI" parent="@style/Theme.MaterialComponents.DayNight">
+        <item name="android:fontFamily">@*android:string/config_bodyFontFamily</item>
+    </style>
+    <style name="islandBackgroundOverlay" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">48dp</item>
+    </style>
 </resources>
