--- a/core/res/res/values/flare_config.xml
+++ b/core/res/res/values/flare_config.xml
@@ -102,5 +102,8 @@
 
     <!-- Whether to spoof device as pixel for certain google apps, to
          unlock pixel-exclusive features -->
-    <bool name="config_spoofGoogleApps">true</bool>     
+    <bool name="config_spoofGoogleApps">true</bool>
+
+    <!-- Whether to spoof GMS as Pixel Tablet -->
+    <bool name="config_spoofasTablet">false</bool>     
 </resources>
