--- a/packages/SystemUI/res/values/flare_strings.xml
+++ b/packages/SystemUI/res/values/flare_strings.xml
@@ -61,4 +61,8 @@
     <string name="usage_data">used today</string>
     <string name="usage_data_default_suffix">Data</string>
     <string name="usage_wifi_default_suffix">Wi-Fi</string>
+
+    <!-- Island notification -->
+    <string name="now_playing_on">Now Playing on %1$s</string>
+    <string name="by_artist">%1$s by %2$s</string>
 </resources>
