--- a/packages/SystemUI/res/values/flare_strings.xml
+++ b/packages/SystemUI/res/values/flare_strings.xml
@@ -11,4 +11,10 @@
 
     <!-- Status bar -->
     <string name="status_bar_icons_title">Status bar icons</string>
+
+    <!-- Advanced Reboot -->
+    <string name="global_action_restart_advanced">Advanced</string>
+    <string name="global_action_restart_recovery">Recovery</string>
+    <string name="global_action_restart_bootloader">Bootloader</string>
+    <string name="global_action_restart_ui">SystemUI</string>
 </resources>
