FlareUtils: Introduce Custom settings layout & SystemUI Restart prompt API
Signed-off-by: afterallafk <shivamatiet2001@gmail.com>

--- a/core/res/res/values/flare_symbols.xml
+++ b/core/res/res/values/flare_symbols.xml
@@ -36,4 +36,8 @@
    
     <!-- Camera -->
     <java-symbol type="array" name="config_cameraHFRPrivAppList" />
+
+    <!-- Settings Restart -->
+    <java-symbol type="string" name="settings_restart_title" />
+    <java-symbol type="string" name="settings_restart_message" />
 </resources>
