--- a/packages/SystemUI/res/values/flare_config.xml
+++ b/packages/SystemUI/res/values/flare_config.xml
@@ -27,4 +27,7 @@
          Possible values: 3, 3.1, 3.2, 4, 4.1, 4.2
     -->
     <string name="config_screenRecorderAVCProfileLevel" translatable="false">4.2</string>
+
+    <!-- If not zero, limits the internal screen recorder's framerate to the set value. -->
+    <integer name="config_screenRecorderMaxFramerate">0</integer>
 </resources>
