--- a/core/res/res/values/flare_config.xml
+++ b/core/res/res/values/flare_config.xml
@@ -75,4 +75,8 @@
     <!-- List of system apps that are allowed to be locked with app lock.
          Use with extreme caution. -->
     <string-array name="config_appLockAllowedSystemApps" translatable="false" />
+
+    <!-- Whether to cleanup fingerprints upon connection to the daemon and when
+         user switches -->
+    <bool name="config_cleanupUnusedFingerprints">true</bool>     
 </resources>
